# repart-kv

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  HashPartitionManager.h  INDEX.md  INSTALL_DEPENDENCIES.md  PROJECT_SUMMARY.md  PartitionManager.h  QUICK_START.md  README.md  RepartitionTable.h  StorageEngine.h  build.sh  experiment_set.sh  generate_charts.R  main.cpp  run_tests.sh  sample_workload.txt  ycsb_a.toml  ycsb_a_requests__1__engine__1__tkrzw_tree__2paths.csv  ycsb_a_requests__1__hard__1__tkrzw_tree__2paths.csv  ycsb_a_requests__1__hard__8__tkrzw_tree__2paths.csv  ycsb_a_requests__2__engine__1__tkrzw_tree__2paths.csv  ycsb_a_requests__2__hard__1__tkrzw_tree__2paths.csv  ycsb_a_requests__2__hard__8__tkrzw_tree__2paths.csv  ycsb_a_requests__4__engine__1__tkrzw_tree__2paths.csv  ycsb_a_requests__4__hard__1__tkrzw_tree__2paths.csv  ycsb_a_requests__4__hard__8__tkrzw_tree__2paths.csv  ycsb_b.toml  ycsb_c.toml  ycsb_d.toml  ycsb_e.toml
graph/: Graph.h  MetisGraph.h  README.md  example_graph.cpp  example_metis_graph.cpp  test_graph.cpp  test_metis_graph.cpp
graph/test/: test_graph.cpp  test_metis_graph.cpp
keystorage/: AbslBtreeKeyStorage.h  INTERACTIVE_USAGE.md  KeyStorage.h  KeyStorageConcepts.h  KeyStorageIterator.h  KeyStorageValueBinary.h  LevelDBKeyStorage.h  LmdbKeyStorage.h  MapKeyStorage.h  README.md  TEST_RESULTS.md  TkrzwHashKeyStorage.h  TkrzwTreeKeyStorage.h  UnorderedDenseKeyStorage.h  example_tkrzw_keystorage.cpp  example_usage.cpp  interactive_keystorage_test.cpp  test_concepts.cpp  test_interactive_keystorage.sh  test_invalid_type.cpp  test_keystorage.cpp
keystorage/test/: test_concepts.cpp  test_invalid_type.cpp  test_keystorage.cpp
kvstorage/: HardRepartitioningKeyValueStorage.h  LockStrippingKeyValueStorage.h  PartitionedKeyValueStorage.h  RepartitioningKeyValueStorage.h  SoftRepartitioningKeyValueStorage.h  Tracker.h  test_graph_tracking.cpp  test_partitioned_kv_storage.cpp  test_repartitioning.cpp  test_repartitioning_storage.cpp
kvstorage/test/: make_partitioned_test_storage.h  test_graph_tracking.cpp  test_partitioned_kv_storage.cpp  test_repartitioning_storage.cpp
kvstorage/threaded/: HardPartitionWorker.h  HardThreadedRepartitioningKeyValueStorage.h  Operation.h  README.md  Request.h  SoftPartitionWorker.h  SoftThreadedRepartitioningKeyValueStorage.h  test_future.cpp  test_operation.cpp  test_request.cpp  test_soft_partition_worker.cpp
kvstorage/threaded/future/: Future.h  test_future.cpp
kvstorage/threaded/future/test/: test_future.cpp
kvstorage/threaded/operation/: DoneOperation.h  HardReadOperation.h  HardScanOperation.h  HardWriteOperation.h  Operation.h  ReadOperation.h  ScanOperation.h  SyncOperation.h  WriteOperation.h  test_doneoperation.cpp  test_operation.cpp  test_readoperation.cpp  test_scanoperation.cpp  test_storage_operation.cpp  test_syncoperation.cpp  test_writeoperation.cpp
kvstorage/threaded/operation/test/: test_doneoperation.cpp  (+6 more)
kvstorage/threaded/test/: test_soft_partition_worker.cpp
partition/: HashPartitionManager.h  PartitionManager.h
reports/experiment_report/: build.sh  main.tex  references.bib
reports/operation_report/: README.md  main.tex  references.bib
results/: aggregate_latency.py  aggregate_latency_latency_average.py  aggregate_results.bash  aggregate_results.py  aggregate_results_latency_average.bash  aggregate_throughput_time.py  generate_charts.R  generate_disk_time_charts.R  generate_latency_charts.R  generate_latency_charts_latency_average.R  generate_makespan_charts.R  generate_memory_time_charts.R  generate_throughput_latency_by_thinking_time_charts.R  generate_throughput_latency_by_thinking_time_charts_latency_average.R  generate_throughput_latency_charts.R  generate_throughput_latency_charts_latency_average.R  generate_throughput_thinking_time_charts.R  generate_throughput_time_charts.R  plot_results.bash  plot_results_latency_average.bash  ycsb_a__1__engine__1__lmdb__1__0(1).csv  ycsb_a__1__engine__1__lmdb__1__0(1).txt  ycsb_a__1__engine__1__lmdb__1__0(2).csv  ycsb_a__1__engine__1__lmdb__1__0(3).csv  ycsb_a__1__engine__1__lmdb__1__0(4).csv  ycsb_a__1__engine__1__lmdb__1__0(5).csv  ycsb_a__1__engine__1__tkrzw_tree__1__0(1).csv  ycsb_a__1__engine__1__tkrzw_tree__1__0(1).txt  ycsb_a__1__engine__1__tkrzw_tree__1__0(2).csv  ycsb_a__1__engine__1__tkrzw_tree__1__0(3).csv  ycsb_a__1__engine__1__tkrzw_tree__1__0(4).csv  ycsb_a__1__engine__1__tkrzw_tree__1__0(5).csv  ycsb_a__1__hard__1__lmdb__1__0(1).csv  ycsb_a__1__hard__1__lmdb__1__0(1).txt  ycsb_a__1__hard__1__lmdb__1__0(2).csv  ycsb_a__1__hard__1__lmdb__1__0(3).csv  ycsb_a__1__hard__1__lmdb__1__0(4).csv  ycsb_a__1__hard__1__lmdb__1__0(5).csv  ycsb_a__1__hard__1__lmdb__1__1000(1).csv  ycsb_a__1__hard__1__lmdb__1__1000(2).csv  (+284 more)
results/aggregated_results/: ycsb_a__tkrzw_tree.csv
results/aggregated_results/makespan/: ycsb_a__lmdb.csv  ycsb_a__tkrzw_tree.csv  ycsb_d__lmdb.csv  ycsb_d__tkrzw_tree.csv
results/aggregated_results/throughput/: ycsb_a__lmdb.csv  ycsb_a__tkrzw_tree.csv  ycsb_d__lmdb.csv  ycsb_d__tkrzw_tree.csv
results/aggregated_throughput_time/: ycsb_a__lmdb__1.csv  ycsb_a__lmdb__2.csv  ycsb_a__lmdb__4.csv  ycsb_a__tkrzw_tree__1.csv  ycsb_a__tkrzw_tree__2.csv  ycsb_a__tkrzw_tree__4.csv  ycsb_d__lmdb__1.csv  ycsb_d__lmdb__2.csv  ycsb_d__lmdb__4.csv  ycsb_d__tkrzw_tree__1.csv  ycsb_d__tkrzw_tree__2.csv  ycsb_d__tkrzw_tree__4.csv
src/: repart_kv.cpp  repart_kv_api.h
storage/: AbslBtreeStorageEngine.h  INTERACTIVE_USAGE.md  LevelDBStorageEngine.h  LmdbStorageEngine.h  MapStorageEngine.h  Status.h  StorageEngine.h  StorageEngineConcepts.h  StorageEngineIterator.h  StorageEngineIteratorConcepts.h  TbbStorageEngine.h  TkrzwHashStorageEngine.h  TkrzwTreeStorageEngine.h  compare_engines.sh  example_storage.cpp  example_tkrzw_storage.cpp  example_tkrzw_tree_storage.cpp  interactive_storage_test.cpp  test_interactive.sh  test_map_storage_engine.cpp  test_storage_engine.cpp
storage/test/: test_storage_engine.cpp
table/: RepartitionTable.h
utils/: README.md  test_assertions.h  test_resources.h
workload/: Workload.h
